# dwmend

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
assets/: config.toml  generate_icon.ps1
crates/dwmend/: Cargo.toml  build.rs  manifest.xml
crates/dwmend-layout/: Cargo.toml
crates/dwmend-layout/src/: bsp.rs  lib.rs  monocle.rs  rect.rs
crates/dwmend-platform/: Cargo.toml
crates/dwmend-platform/src/: defer_pos.rs  display_change.rs  dpi.rs  dwm.rs  enumerate.rs  focus_border.rs  focus_sink.rs  foreground.rs  ipc.rs  keyboard.rs  lib.rs  monitor.rs  rect.rs  window.rs  winevent.rs
crates/dwmend/src/: autostart.rs  cli.rs  commands.rs  config.rs  daemon.rs  events.rs  filter.rs  hotkey.rs  ids.rs  ipc.rs  lib.rs  main.rs  monitor.rs  reaper.rs  recovery.rs  runtime.rs  watcher.rs  window.rs  workspace.rs
crates/dwmend/src/state/: commands.rs  mod.rs  monitors.rs  retile.rs  workspaces.rs
crates/dwmend/src/ui/: bar.rs  mod.rs  peek.rs  toast.rs  tray.rs
crates/dwmend/wix/: License.rtf  main.wxs
