[package]
name = "dwmend-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dwmend-layout = { workspace = true }
bitflags = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Pipes",
    # Win32_System_IO is required transitively by ReadFile / WriteFile /
    # ConnectNamedPipe — their signatures reference OVERLAPPED, which is
    # gated behind this feature even though we never name it directly.
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
]
