[package]
name = "dwmend"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
default-run = "dwmend"

[[bin]]
name = "dwmend"
path = "src/main.rs"

[dependencies]
dwmend-platform = { workspace = true }
dwmend-layout = { workspace = true }

color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
ctrlc = { workspace = true }
regex = { workspace = true }
bitflags = { workspace = true }
dirs = { workspace = true }

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    # Required transitively by IP_ADAPTER_ADDRESSES_LH (socket addresses
    # appear inside the struct definition).
    "Win32_Networking_WinSock",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Registry",
]

[build-dependencies]
embed-resource = { workspace = true }
