[package]
name = "dwmend"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
default-run = "dwmend"

[[bin]]
name = "dwmend"
path = "src/main.rs"

[dependencies]
dwmend-platform = { workspace = true }
dwmend-layout = { workspace = true }

color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
ctrlc = { workspace = true }
regex = { workspace = true }
bitflags = { workspace = true }
dirs = { workspace = true }

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    # Required transitively by IP_ADAPTER_ADDRESSES_LH (socket addresses
    # appear inside the struct definition).
    "Win32_Networking_WinSock",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Registry",
]

[build-dependencies]
embed-resource = { workspace = true }

# cargo-wix configuration. Drives `cargo wix -p dwmend` to build the
# per-user MSI from `wix/main.wxs`. The UpgradeCode here mirrors the
# one baked into `main.wxs` and must NEVER change \u2014 every future
# release must keep using it so MajorUpgrade can find and replace
# the previous install. `path-guid` identifies the install directory
# component; it likewise must never change. License/EULA generation
# is disabled because we ship a hand-authored `wix/License.rtf`.
[package.metadata.wix]
upgrade-guid = "62710433-7EF1-4DD2-969E-C57035D4E569"
path-guid = "9E8A1D2B-3F47-4C6A-9B5E-7C2D4F8E1A3B"
license = false
eula = false
